--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,8 @@ body {
   .card-image-desktop {
     display: block;
     width: 50%;
+    height: 28rem;
+    object-fit: cover;
     flex-shrink: 0;
   }
 }
